--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 bcrypt==5.0.0
 blinker==1.9.0
+certifi==2026.1.4
 cffi==2.0.0
 click==8.3.1
 cryptography==46.0.3
@@ -15,6 +16,8 @@ email-validator==2.3.0
 fastapi==0.128.0
 fastapi-mail==1.6.1
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 Jinja2==3.1.6
 MarkupSafe==3.0.3
@@ -28,6 +31,7 @@ pydantic_core==2.41.5
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.21
+redis==7.1.0
 regex==2025.11.3
 rsa==4.9.1
 six==1.17.0
