--- a/.env.api.example
+++ b/.env.api.example
@@ -1,9 +1,14 @@
+#RDB Connection
 DB_HOST=
 DB_PORT=
 DB_USER=
 DB_PASS=
 DB_NAME=
 
+#Redis Connection
+REDIS_URL=
+
+#Google Mail Server
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_FROM=
@@ -12,4 +17,18 @@ MAIL_PORT=
 MAIL_TLS=
 MAIL_SSL=
 
-SECRET_KEY=
+#Google OAuth2 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# All Symmetric Key Use HS256
+# Generate with: openssl rand -hex 32
+
+#JWT key
+JWT_SECRET_KEY=
+
+#Webhook key 
+WEBHOOK_SECRET_KEY=
+
+#Starlette Middleware Session Key 
+SESSION_SECRET=
