--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.7.0
 anyio==4.12.1
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
+Authlib==1.6.6
 bcrypt==5.0.0
 blinker==1.9.0
 certifi==2026.1.4
@@ -19,6 +20,7 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 passlib==1.7.4
