--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,7 @@ services:
     build: .
     ports:
       - 8000:8000
+    restart: always
     depends_on:
       db:
         condition: service_healthy
