--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,21 @@
 services:
+  nginx:
+    image: nginx:stable-alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+      # - "443:443"
+    depends_on:
+      - api
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./nginx/certs:/etc/nginx/certs:ro
+
   api:
     # image: 0808wonje/app
     build: .
-    ports:
-      - 8000:8000
+    expose:
+      - "8000"
     restart: always
     depends_on:
       db:
